# remote-cmd

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  ProjectHome.md  WikiMainPage.md  configure
autom4te.cache/: output.0  requests  traces.0
src/: Makefile.am  authhost.c  cleanupsession.c  dispstderr.c  freechannel.c  functions.c  getuserinfo.c  initsession.c  main.c  remotecmd.h  runcommand.c  setenv.c  skiperror.c
trunk/: README  aclocal.m4  config.h.in  configure.ac
trunk/autom4te.cache/: output.1  traces.1
trunk/src/: Makefile.in  closechannel.c  createsocket.c  dispstdout.c  gethostinfo.c  getuserinfo.c  main.c  remotecmd.h  runcommand.c
wiki/: WikiMainPage.wiki
