## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = remotecmd

remotecmd_SOURCES = \
	main.c     \
	authhost.c     \
	cleanupsession.c     \
	closechannel.c     \
	createsocket.c     \
	dispstderr.c     \
	freechannel.c     \
	gethostinfo.c     \
	getuserinfo.c     \
	initsession.c     \
	setenv.c     \
	runcommand.c     \
	skiperror.c     \
	dispstdout.c     \
	functions.c     \
	remotecmd.h

remotecmd_LDFLAGS = 

remotecmd_LDADD = 

